<resources>
    <string name="app_name">And Bible</string>
    <string name="splash_top_text">\n\"And God said, \'Let there be light,\' and there was light.\"\nGenesis 1:3</string>
    <string name="help_text">Press the MENU button for actions\n\nGo to the next or previous chapter by using the track-ball, D-pad or swiping the screen with your finger</string>
    <string name="help_text_long"><b>Navigation</b>\nGo to the next or previous chapter by using the track-ball, D-pad or swiping the screen with your finger
    \nDouble-tap toggles Fullscreen on/off.
    \n\n<b>Menu</b>
    \nPress the MENU button for actions
    \n\nTo download more documents press Menu/Administration/Download Documents
    \n\n<b>Speech</b>\nPress Speak to access a dialog to start or stop reading
    \n\n<b>My Note</b>\nNotes can be added via the My Note menu item on the verse context menu.  The list of existing notes can be accessed via the main menu.
    \n\n<b>Bookmarks</b>\nBookmarks can be added via the verse context menu.  The Bookmark Manager is accessed via the main menu.  The Bookmark Manager context menu allows bookmarks to be grouped using labels.
    \n\n<b>Search</b>\nSearch text can include special characters like *, ?, AND, OR, NOT (see "Apache Lucene - Query Parser Syntax" for more details)
    \n\n<b>Context Menus</b>
    \nLong press on the Bible view to open the context menu for actions affecting the current verse.
    \nLong press on a document in the document selector to delete it or view information.
    \nLong press the Back button to access the History list
    </string>
    <string name="version_text">Version %s</string>
    <string name="no_sdcard_error">Please insert an SD card and start And Bible again.</string>
    <string name="chooseBook">Document</string>
    <string name="selectPassage">Passage</string>
    <string name="search">Find</string>
    <string name="settings">Settings</string>
    <string name="history">History</string>
    <string name="speak">Speak</string>
    <string name="help">Help</string>
    <string name="verse">Verse</string>
    <string name="administration">Administration</string>
    <string name="choosePassageBookName">Choose Book</string>
    <string name="choosePassageChapterName">Choose Chapter</string>
    <string name="choosePassageVerseName">Choose Verse</string>
    <string name="bible">Bible</string>
    <string name="deuterocanonical">Deuterocanonical</string>
    <string name="search_index">Search Index</string>
    <string name="index_creation_required">An index is required to search.\n\nIndexes may be downloaded from the internet or created locally.\n\nDownloading is much quicker and downloaded indexes have more search features.\n\nAn internet connection is required to download indexes.\n</string>
    <string name="indexing_wait_msg">When indexing has completed you will be taken to the search screen.</string>
    <string name="index">Index</string>
    <string name="index_download">Download</string>
    <string name="index_not_available_for_download">This index is not available for download</string>
    <string name="index_create">Create</string>
    <string name="progress_status">Progress</string>
    <string name="task_kill_warning">These long running tasks may terminate if you switch to another application before they finish.</string>
    <string name="no_tasks_running">There are no tasks currently being executed.</string>
    <string name="search_results">Find Results</string>
    <string name="search_words_group_prompt">Find verses</string>
    <string name="search_all_words">All words</string>
    <string name="search_any_word">Any word</string>
    <string name="search_phrase">Phrase</string>
    <string name="search_result_count">%d matches found</string>
    <string name="search_showing_first">Too many matches.  Showing first %d</string>
    <string name="search_bible_section_group_prompt">Search Where</string>
    <string name="search_all_bible">Whole Bible</string>
    <string name="search_new_testament">New Testament</string>
    <string name="search_old_testament">Old Testament</string>
    <string name="search_current_book">Current book</string>
    <string name="error_executing_search">Invalid search query</string>
    <string name="prefs_show_verseno_title">Verse numbers</string>
    <string name="prefs_show_verseno_summary">Show verse numbers</string>
    <string name="prefs_verse_per_line_title">One verse per line</string>
    <string name="prefs_verse_per_line_summary">Show each verse on a different line</string>
    <string name="prefs_show_bookmarks_title">Show bookmark icons</string>
    <string name="prefs_show_bookmarks_summary">Show icon in bookmarked verses</string>
    <string name="prefs_show_mynotes_title">Show My Note icons</string>
    <string name="prefs_show_mynotes_summary">Show icon in verses with My Note</string>
    <string name="prefs_show_notes_title">Footnotes and x-refs</string>
    <string name="prefs_show_notes_summary">Show footnotes and cross-references</string>
    <string name="prefs_show_strongs_title">Show Strong\'s numbers</string>
    <string name="prefs_show_strongs_summary">Links to Greek &amp; Hebrew definitions</string>
    <string name="prefs_show_morphology_title">Morphological codes</string>
    <string name="prefs_show_morphology_summary">Show Robinson\'s Greek morphology</string>
    <string name="prefs_section_title_title">Section titles</string>
    <string name="prefs_section_title_summary">Show non-canonical section titles</string>
    <string name="prefs_red_letter_title">Red Letter</string>
    <string name="prefs_red_letter_summary">Show words of Christ in red</string>
    <string name="prefs_tilt_to_scroll_title">Tilt to scroll</string>
    <string name="prefs_tilt_to_scroll_summary">Tilt device to scroll page down</string>
    <string name="prefs_night_mode_title">Night mode</string>
    <string name="prefs_night_mode_summary">For easier reading in the dark</string>
    <string name="prefs_night_mode_automatic">Automatic</string>
    <string name="prefs_navigate_to_verse_title">Navigate to verse</string>
    <string name="prefs_navigate_to_verse_summary">Choose verse (and chapter) when selecting a passage</string>
    <string name="prefs_open_links_in_special_window_title">Open links in special window</string>
    <string name="prefs_open_links_in_special_window_summary">For quicker display of cross-references and Strongs</string>
    <string name="prefs_text_size_title">Text size</string>
    <string name="prefs_text_size_summary">See more or see more clearly</string>
    <string name="prefs_text_size_sample_text">Sample text</string>
	<string name="prefs_screen_timeout_title">Sleep</string>
    <string name="prefs_screen_timeout_summary">Idle time before screen turns off</string>
    <string name="x_minutes">%d minutes</string>
    <string name="prefs_interface_locale_title">Application language</string>
    <string name="prefs_interface_locale_summary">Select custom user interface language</string>
    <string name="locale_change_warning">Application will be restarted to switch to the new interface language</string>
    <string name="window">Window</string>
    <string name="windowClose">Close</string>
    <string name="windowMaximise">Maximise</string>
    <string name="windowMinimise">Minimise</string>
    <string name="windowSynchronise">Synchronise</string>
    <string name="windowMoveFirst">Move first</string>
    <string name="no_chapter_notes">No notes exist in this chapter</string>
    <string name="no_verse_notes">No notes exist in this verse</string>
    <string name="previous">Previous</string>
    <string name="next">Next</string>
    <string name="strongs">Strong\'s Dictionary</string>
    <string name="strongs_not_installed">Please download Strong\'s Hebrew and Greek dictionaries</string>
    <string name="all_greek_occurrences">Find all occurrences</string>
    <string name="all_hebrew_occurrences">Find all occurrences</string>
    <string name="no_indexed_bible_with_strongs_ref">You must download a Bible containing Strong\'s numbers and download its index via Search</string>
    <string name="morph_robinson_not_installed">Please download \'Robinson\'s Morphological Analysis Codes\' dictionary</string>
    <string name="strongs_toggle_button_on">nnnn</string>
    <string name="strongs_toggle_button_off">nnnn</string>
    <string name="download">Download Documents</string>
    <string name="download_confirmation">Download a Bible from the internet?</string>
    <string name="download_source_message">Documents are downloaded from\nhttp://www.crosswire.org\n&amp; http://ibt.org.ru\n&amp; http://xiphos.org</string>
    <string name="download_document_confirm_prefix">Download</string>
    <string name="download_refreshing_book_list">Refreshing list of available documents</string>
    <string name="download_refresh_book_list_menu_item">Refresh</string>
    <string name="error_downloading">An error occurred downloading.  Please check your internet connection.</string>
    <string name="no_internet_connection">Could not connect to the internet</string>
    <string name="storage_space_warning">Insufficient local storage space.</string>
    <string name="wait_for_bible">Please wait for the Bible to finish downloading.  You will then be taken to the main screen.\n\nDownload more documents later by navigating to Menu button/Administration/Download documents.</string>
    <string name="wait_for_bible_not_yet">Please wait.  A bible has not yet completed installation.</string>
    <string name="download_complete_no_bibles">No bible was installed.  Please press Back and try again.</string>
    <string name="too_many_jobs">Too many tasks executing.  Please wait for some to finish and try again.</string>
    <string name="document_not_installed">Please download \'%s\'</string>
    <string name="install_zip">Load Document From Zip</string>
    <string name="install_zip_successfull">Module was installed successfully</string>
    <string name="extracting_zip_file">Extracting Zip file now...</string>
    <string name="checking_zip_file">Checking given file...</string>
    <string name="invalid_module">File does not contain a valid SWORD module</string>
    <string name="module_already_installed">File contains a module that is already installed</string>
    <string name="rdg_plan_title">Reading Plan</string>
    <string name="rdg_plan_selector_title">Choose a Reading Plan</string>
    <string name="rdg_plan_day">Day %s</string>
    <string name="rdg_plan_set_start_jan1">Start Jan 1</string>
    <string name="done">Done</string>
    <string name="reset">Reset</string>
    <string name="rdg_plan_y1ntpspr">New Testament, Psalms, and Proverbs in a year</string>
    <string name="rdg_plan_y1ot1nt1_chronological">Through the Bible chronologically in a year</string>
    <string name="rdg_plan_y1ot1nt1_OTandNT">Through the bible in a year - OT and NT</string>
    <string name="rdg_plan_y1ot1nt1_OTthenNT">Through the bible in a year - OT then NT</string>
    <string name="rdg_plan_y1ot1nt2_mcheyne">Through the bible in a year (M\'Cheyne)</string>
    <string name="rdg_plan_y2ot1ntps2">2 year plan - OT once, NT and Psalms twice</string>
    <string name="delete">Delete</string>
    <string name="delete_index">Delete search index</string>
    <string name="about">About</string>
    <string name="delete_doc">Delete %s?</string>
    <string name="delete_search_index_doc">Delete index of %s?</string>
    <string name="select_text">Select text</string>
    <string name="select_text_help">Drag slowly to select.\nThen touch selection to copy.</string>
    <string name="bookmarks">Bookmarks</string>
    <string name="stop">Stop</string>
    <string name="rewind">Rewind</string>
    <string name="forward">Forward</string>
    <string name="speak_queue">Queue</string>
    <string name="speak_repeat">Repeat</string>
    <string name="mynotes">My Notes</string>
</resources>