<?xml version="1.0" encoding="utf-8"?>
<!-- The main menu accessed via Menu key
 
 @author Martin Denham [mjdenham at gmail dot com]
 @see gnu.lgpl.License for license details.<br>
      The copyright to this program is held by it's author.
-->
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:appcompat="http://schemas.android.com/apk/res-auto" >

   	<item android:id="@+id/selectPassageButton" 
		  android:title="@string/selectPassage"
		  android:icon="@android:drawable/ic_menu_today"
		  appcompat:showAsAction="always"/>

	<item android:id="@+id/searchButton"
		  android:title="@string/search"
		  android:icon="@android:drawable/ic_menu_search"/>

	<item android:id="@+id/bookmarksButton"
		  android:title="@string/bookmarks" 
		  android:icon="@drawable/ic_menu_bookmarks"/>

	<item android:id="@+id/mynotesButton"
		  android:title="@string/mynotes" 
		  android:icon="@drawable/ic_menu_usernotes"/>

	
	<item android:id="@+id/speakButton"
		  android:title="@string/speak"
		  android:icon="@drawable/ic_action_volume_on"/>

</menu>
