<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android" 
	android:id="@+id/titleBar"
    android:layout_width="fill_parent" 
    android:layout_height="@dimen/title_bar_height"
    android:background="#FF848284"
    >

	<LinearLayout android:id="@+id/leftTitlePanel" 
		android:orientation="horizontal"
		android:layout_width="wrap_content"
		android:layout_height="fill_parent"
		android:layout_alignParentLeft="true"
	    android:layout_toLeftOf="@+id/rightTitlePanel"
	>
	    <Button android:id="@+id/titleDocument"
				style="@style/TitleBarTitleButton"
				android:text="@string/app_name"
	    />
	    <Button android:id="@+id/titlePassage"
				style="@style/TitleBarTitleButton"
	    />
		<ProgressBar android:id="@+id/progressCircular"
				style="?android:attr/progressBarStyleSmallTitle"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_marginLeft="5dip"
				android:layout_gravity="center_vertical"
				android:visibility="gone"
				android:max="10000"
				/>
	</LinearLayout>
	<LinearLayout android:id="@+id/rightTitlePanel" 
		android:orientation="horizontal"
		android:layout_width="wrap_content"
		android:layout_height="fill_parent"
		android:layout_alignParentRight="true"
	>
	    <ImageButton android:id="@+id/quickSpeakRew"
	        	android:src="@android:drawable/ic_media_rew"
	        	android:contentDescription="@string/rewind"
	        	android:visibility="gone"
				style="@style/SmallTitleBarButton"
	    />
	    <ImageButton android:id="@+id/quickSpeak"
	        	android:src="@drawable/ic_menu_happy_21"
	        	android:contentDescription="@string/speak"
	        	android:visibility="gone"
				style="@style/SmallTitleBarButton"
	    />
	    <ImageButton android:id="@+id/quickSpeakStop"
	        	android:src="@drawable/ic_media_stop"
	        	android:contentDescription="@string/stop"
	        	android:visibility="gone"
				style="@style/SmallTitleBarButton"
	    />
	    <ImageButton android:id="@+id/quickSpeakFF"
	        	android:src="@android:drawable/ic_media_ff"
	        	android:contentDescription="@string/forward"
	        	android:visibility="gone"
				style="@style/SmallTitleBarButton"
	    />
	    <ToggleButton android:id="@+id/strongsToggle"
					android:textOn="@string/strongs_toggle_button_on"
					android:textOff="@string/strongs_toggle_button_off"
			        android:visibility="gone"
			        android:checked="true"
					android:textStyle="italic"
					style="@style/TitleBarToggleButton"
		/>
   	    <Button android:id="@+id/quickBibleChange"
		        android:visibility="invisible"
				style="@style/TitleBarButton"
	    />
	    <Button android:id="@+id/quickCommentaryChange"
		        android:visibility="gone"
				style="@style/TitleBarButton"
	    />
	    <Button android:id="@+id/quickDictionaryChange"
		        android:visibility="gone"
				style="@style/TitleBarButton"
	    />
   	</LinearLayout>
           
</RelativeLayout>
